# cw-uuid

./: .gitignore  Cargo.toml  README.md
contracts/uuid/: Cargo.toml  README.md
contracts/uuid/examples/: schema.rs
contracts/uuid/schema/: uuid_gen.json
contracts/uuid/schema/raw/: instantiate.json  query.json
contracts/uuid/src/: contract.rs  error.rs  msg.rs  state.rs
