[package]
name = "uuid_gen"
version.workspace = true
authors.workspace = true
edition.workspace = true
publish.workspace = true
keywords.workspace = true

exclude = [
  "artifacts/*",
]

[lib]
crate-type = ["cdylib", "rlib"]
doctest = false

[features]
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]
# use library feature to disable all instantiate/execute/query exports
library = []

[dependencies]
cosmwasm-std.workspace = true
cosmwasm-schema.workspace = true
schemars.workspace = true
serde.workspace = true
cw-storage-plus.workspace = true

cw-utils = "1.0.1"
cw2 = "1.0.1"
thiserror = { version = "1.0.38" }
nois = "0.6.0"
serde_json = "1.0.93"
serde-cw-value = "0.7.0"
serde-json-wasm = "0.5.0"
uuid = {version = "1.3.1", default-features = false}
